completed CRUD methods for wiki

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light d-flex align-items-center mb-3">
+    <a class="navbar-brand p-3 m-0 " href="/articles">
+      WIKINIMIOUS
+    </a>
+  </nav>
     <%= yield %>
   </body>
 </html>
