--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,10 @@
-<h1><%= @article.title %></h1>
-<h1><%= @article.content %></h1>
+<div class="mx-auto" style="width: 900px;">
+  <button type="button" class="btn btn-secondary my-4"><%= link_to "DELETE", article_path(@article),
+                                                                            method: :delete,
+                                                                            data: { confirm: "Are you sure?" }
+                                                                            %></button>
+  <button type="button" class="btn btn-secondary m-4"><%= link_to "EDIT", edit_article_path(@article) %></button>
 
-<%= link_to "DELETE", article_path(@article), method: :delete %>
-<%= link_to "EDIT", edit_article_path(@article) %>
+  <h1><%= @article.title %></h1>
+  <h4><%= @article.content %></h1>
+</div>
